# monotrade-platform-rust

./: .gitignore  Cargo.toml  README.md
chat/: Cargo.toml
chat/src/: client.rs  codec.rs  main.rs  server.rs  session.rs
console_demo/: Cargo.toml
console_demo/src/: main.rs
examples/console_demo/: Cargo.toml
examples/console_demo/src/: main.rs
examples/ffi-demo/: Cargo.toml  index.js  package.json
examples/ffi-demo/src/: lib.rs
examples/neon-demo/: package.json
examples/neon-demo/native/: Cargo.toml
ffi-demo/: Cargo.toml  package-lock.json  package.json
ffi-demo/src/: lib.rs
monotrade-api/: Cargo.toml
monotrade-api/src/: strategy.rs
monotrade-api/src/api/: gateway.rs  mod.rs
monotrade-api/src/api/market/: tick.rs
monotrade-api/src/market/: tick.rs
monotrade-frontend/: README.md  package.json  quasar.conf.js
monotrade-neon/: README.md  package.json
monotrade-neon/native/: Cargo.toml
monotrade-neon/native/src/: lib.rs
monotrade-platform/: Cargo.toml
monotrade-platform/src/: platform.rs
monotrade-platform/src/actors/: mock_actor.rs  mod.rs
napi-demo/: Cargo.toml  index.js  package.json
napi-demo/src/: lib.rs
neon-demo/: README.md  package.json
neon-demo/lib/: index.js
neon-demo/native/: Cargo.toml
neon-demo/native/src/: lib.rs
src/: Makefile  lib.rs  main.rs  platform.rs  platfrom.rs
src/actors/: mock_actor.rs  mod.rs
src/actors/mocks/: mock_strategy.rs
src/api/: trait_strategy.rs
