[package]
name = "monotrade"
version = "0.0.1"
authors = ["Holbrook <wanghaikuo@tsinghua.org.cn>"]
description = "Quant Strategy Platform"
readme = "README.md"
keywords = ["quant", "trader", "strategy", "algorithm"]
homepage = "https://"
repository = "https://github.com/monotrade/monotrade-platform-rust.git"
documentation = "https://"
categories = ["quant"]
license = "MIT"
exclude = [".gitignore", ".cargo/config", ".github/**", "codecov.yml"]
edition = "2018"

[lib]
name = "monotrade"
path = "src/lib.rs"

[workspace]
members = ["examples/console_demo"]

[features]
default = ["resolver"]

# dns resolver
resolver = ["trust-dns-proto", "trust-dns-resolver"]

# Adds assertion to prevent processing too many messages on event loop
mailbox_assert = []

[dependencies]
actix-rt = "1.1"
actix_derive = "0.5"
bytes = "0.5.3"
crossbeam-channel = "0.4"
derive_more = "0.99.2"
futures-channel = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.1", default-features = false }
log = "0.4"
pin-project = "0.4.17"
once_cell = "1.3"
bitflags = "1.2"
smallvec = "1.0"
parking_lot = "0.11"
tokio = { version = "0.2.6", default-features = false, features = ["rt-core", "rt-util", "io-driver", "io-util", "tcp", "uds", "udp", "time", "signal", "sync"] }
tokio-util = { version = "0.3", features = ["full"] }

# dns resolver
trust-dns-proto = { version = "0.19", optional = true, default-features = false, features = ["tokio-runtime"] }
trust-dns-resolver = { version = "0.19", optional = true, default-features = false, features = ["tokio-runtime", "system-config"] }

[dev-dependencies]
doc-comment = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
