[package]
name = "monotrade-platform"
version = "0.1.0"
authors = ["Holbrook <wanghaikuo@tsinghua.org.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "monotrade_platfrom"
path = "src/lib.rs"

[dependencies]
monotrade-api = { path = "./monotrade-api/" }