[package]
name = "ffi-demo"
version = "0.1.0"
authors = ["Holbrook <wanghaikuo@tsinghua.org.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 指定编译生成的类型是 dylib（动态链接库），
# 名字在 *inux 下是 libffi，Windows 下是 ffi。
name = "ffi"
crate-type = ["dylib"]


[dependencies]
