[package]
name = "napi-demo"
version = "0.1.0"
authors = ["Holbrook <wanghaikuo@tsinghua.org.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "napi"
crate-type = ["dylib"]

[dependencies]
node-api = { git = "https://github.com/jupp0r/node-api.git", branch = "master" }
