[package]
name = "monotrade-neon"
version = "0.1.0"
authors = ["Holbrook <wanghaikuo@tsinghua.org.cn>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "monotrade_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
